# lablib

./: .coveragerc  .gitignore  README.md  pytest.ini  pytest_env.ini  requirements.txt  run.py  setup.cfg  setup.py
.github/compose/: docker-compose.yml
.github/compose/smb_conf/: smb.conf
.github/workflows/: python-app.yml
client/nfc/: studentCard.py
lablib/app/: __init__.py  _app.py  api.py  app.py  auth.py  config.py  config_sample.py  db.py  views.py
lablib/app/models/: __init__.py  books.py  checkout.py  user.py
lablib/app/portal/: views.py
lablib/app/rest/: api.py  book_register.py
lablib/app/templates/: base.html  layout.html  login_form.html  toppage.html  user_page.html
lablib/app/util/: auth.py  db.py
lablib/client/: __init__.py  barcode.py  client_conf_sample.py  felica.py  guiClient.py
src/lablib/: run.py
src/lablib/app/: api.py  app.py
src/lablib/app/templates/: layout.html~
src/lablib/client/: __init__.py  barcode.py  guiClient.py
src/lablib/client/nfc/: felicaReader.py
test/: test_barcode.py  write_event  write_event.c
test/test_flask/: conftest.py  test_books.py  test_checkout.py  test_return.py
