[metadata]
name = lablib
version = 0.1.0
description = library for my lab
url = https://github.com/simarisu78/lablib
license_file = LICENSE
classifires =
	    Development Status :: 1 - Planning
	    Framework :: Flask
	    Programming Language :: Python :: 3
	    Programming Language :: Python :: 3.7
	    License :: OSI Approved :: European Union Public Licence 1.1 (EUPL 1.1)

[aliases]
test=pytest